--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.10",
+    "jsonwebtoken": "^9.0.2",
     "uview-plus": "^3.1.41",
     "vuex": "^4.1.0"
   }
